unpackaged/main/default/objects/PSE_Form__c/PSE_Form__c.object-meta.xml
<CustomObject>
    <description>Manual Quote Forms that gather additional information when a customer needs a Manual Quote created.
Currently, only applies to IM, CNC, Additive, and Die Casting (2021-04-29)
Currently, the forms exist in Hubspot and are being connected to Salesforce via Hubspot -&gt; Snowflake -&gt; Workato -&gt; Salesforce (2021-04-29)</description>
    <label>PSE Form</label>
    <nameField>
        <displayFormat>PSE Form # {00000000}</displayFormat>
        <label>PSE Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSE Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>