unpackaged/main/default/objects/PSE_Form__c/fields/Active_Project__c.field-meta.xml
<CustomField>
    <fullName>Active_Project__c</fullName>
    <label>Active Project or Cost Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>