unpackaged/main/default/objects/PSE_Form__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <inlineHelpText>Is there anything else you would like us to know about your project as we begin quoting your design?</inlineHelpText>
    <label>Is there anything else we should know?</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>