unpackaged/main/default/objects/PSE_Form__c/fields/additional_information__c.field-meta.xml
<CustomField>
    <fullName>additional_information__c</fullName>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>