unpackaged/main/default/objects/PSE_Form__c/fields/Allow_Partial_Qty_Shipments__c.field-meta.xml
<CustomField>
    <fullName>Allow_Partial_Qty_Shipments__c</fullName>
    <inlineHelpText>If your project is a higher quantity order, are partial shipments an option?</inlineHelpText>
    <label>Are partial shipments an option?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>