unpackaged/main/default/objects/PSE_Form__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ORIGINAL Case that the Quote is/was associated with.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>PSE Forms</relationshipLabel>
    <relationshipName>PSE_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>