unpackaged/main/default/objects/PSE_Form__c/fields/cosmetic_or_structural_parts__c.field-meta.xml
<CustomField>
    <fullName>cosmetic_or_structural_parts__c</fullName>
    <description>Are your parts cosmetic, structural or both? Are your parts cosmetic, structural or both?</description>
    <label>cosmetic,structuralorboth?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>