unpackaged/main/default/objects/PSE_Form__c/fields/custom_inspection_required__c.field-meta.xml
<CustomField>
    <fullName>custom_inspection_required__c</fullName>
    <description>If a Custom Inspection is required, please provide more details.</description>
    <label>Further Details if Custom Inspection</label>
    <type>TextArea</type>
</CustomField>