unpackaged/main/default/objects/PSE_Form__c/fields/data_order_placed__c.field-meta.xml
<CustomField>
    <fullName>data_order_placed__c</fullName>
    <label>When you will you place the order</label>
    <type>Date</type>
</CustomField>