unpackaged/main/default/objects/PSE_Form__c/fields/date_parts_delivered__c.field-meta.xml
<CustomField>
    <fullName>date_parts_delivered__c</fullName>
    <label>FabFiveWhendoYouNeedYourParts</label>
    <type>Date</type>
</CustomField>