unpackaged/main/default/objects/PSE_Form__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <description>Where (geographically) will your parts be delivered?</description>
    <label>Where will your parts be delivered?</label>
    <type>TextArea</type>
</CustomField>