unpackaged/main/default/objects/PSE_Form__c/fields/Design_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Design_Feedback__c</fullName>
    <inlineHelpText>Are you open to receiving design feedback that may reduce your cost/lead time?</inlineHelpText>
    <label>AreYouOpenToRecevingDesignFeedback?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>