unpackaged/main/default/objects/PSE_Form__c/fields/do_you_have_a_price_target__c.field-meta.xml
<CustomField>
    <fullName>do_you_have_a_price_target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you have a price target?</label>
    <type>Checkbox</type>
</CustomField>