unpackaged/main/default/objects/PSE_Form__c/fields/do_you_have_a_price_target_picklist__c.field-meta.xml
<CustomField>
    <fullName>do_you_have_a_price_target_picklist__c</fullName>
    <description>Picklist variant of the "Do you have a price target" checkbox. PSE Dashboard can't support checkboxes, so we use a Yes/No picklist instead.</description>
    <label>Do you have a price target?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>