unpackaged/main/default/objects/PSE_Form__c/fields/estimated_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>estimated_delivery_date__c</fullName>
    <description>What will be the estimated final delivery date?</description>
    <label>What is the est. final delivery date?</label>
    <type>Date</type>
</CustomField>