unpackaged/main/default/objects/PSE_Form__c/fields/Estimated_Future_Volume__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Future_Volume__c</fullName>
    <inlineHelpText>After your initial order, what is your estimated future demand and over what time period?</inlineHelpText>
    <label>What is your estimated future demand?</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>