unpackaged/main/default/objects/PSE_Form__c/fields/Final_Quote_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Final_Quote_Email_List__c</fullName>
    <description>Please list the email address(es) of one or more people who should receive a copy of the final quote.</description>
    <label>Final Quote Email List</label>
    <type>TextArea</type>
</CustomField>