unpackaged/main/default/objects/PSE_Form__c/fields/Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_ID__c</fullName>
    <description>Hubspot ID of the Form submitted</description>
    <externalId>true</externalId>
    <label>Form ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>