unpackaged/main/default/objects/PSE_Form__c/fields/Future_Cross_Sell__c.field-meta.xml
<CustomField>
    <fullName>Future_Cross_Sell__c</fullName>
    <inlineHelpText>Do you intend to order this design at a higher volume in the future using different manufacturing processes?</inlineHelpText>
    <label>DoUOrderAdditionQtyOtherManuProcess?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>