unpackaged/main/default/objects/PSE_Form__c/fields/have_you_made_these_parts_before__c.field-meta.xml
<CustomField>
    <fullName>have_you_made_these_parts_before__c</fullName>
    <description>Have you made these or very similar parts before?</description>
    <label>Have you made these parts before</label>
    <length>255</length>
    <type>Text</type>
</CustomField>