unpackaged/main/default/objects/PSE_Form__c/fields/How_Many_Additional_Trial_Parts_Needed__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Additional_Trial_Parts_Needed__c</fullName>
    <label>How Many Additional Trial Parts Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>