unpackaged/main/default/objects/PSE_Form__c/fields/Important_Aspect__c.field-meta.xml
<CustomField>
    <fullName>Important_Aspect__c</fullName>
    <inlineHelpText>What is the most important aspect of your project? We want to optimize our quote to your priorities.</inlineHelpText>
    <label>WhatIsTheMostImportantAspectofYourProj?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>