unpackaged/main/default/objects/PSE_Form__c/fields/Initial_Order_Date_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Initial_Order_Date_Requirement__c</fullName>
    <inlineHelpText>After you have approved tooling and sample parts, how soon do you need to get your first quantity of parts in hand?</inlineHelpText>
    <label>Initial Order Date Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>