unpackaged/main/default/objects/PSE_Form__c/fields/Initial_Order_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Initial_Order_Deadline__c</fullName>
    <inlineHelpText>What is the latest possible date to receive your initial shipment of custom parts?</inlineHelpText>
    <label>Initial Order Deadline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>