unpackaged/main/default/objects/PSE_Form__c/fields/Is_a_formal_production_approval_process__c.field-meta.xml
<CustomField>
    <fullName>Is_a_formal_production_approval_process__c</fullName>
    <description>Is a formal production approval process required (PPAP)?</description>
    <label>Is a formal production approval process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>