unpackaged/main/default/objects/PSE_Form__c/fields/ITAR__c.field-meta.xml
<CustomField>
    <fullName>ITAR__c</fullName>
    <label>ITAR or EAR Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>