unpackaged/main/default/objects/PSE_Form__c/fields/manufactured_in_USA__c.field-meta.xml
<CustomField>
    <fullName>manufactured_in_USA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you need your parts to be manufactured in the U.S?</description>
    <label>Do your parts need to be made in the US?</label>
    <type>Checkbox</type>
</CustomField>