unpackaged/main/default/objects/PSE_Form__c/fields/Manufacturing_Approach__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Approach__c</fullName>
    <inlineHelpText>Did you have a particular manufacturing approach in mind for your design?</inlineHelpText>
    <label>What process will you need?</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>