unpackaged/main/default/objects/PSE_Form__c/fields/Manufacturing_Location__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Location__c</fullName>
    <inlineHelpText>Do you have a preference for a manufacturing location?</inlineHelpText>
    <label>Where can the parts be manufactured?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>