unpackaged/main/default/objects/PSE_Form__c/fields/Multiple_Orders_Possible__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Orders_Possible__c</fullName>
    <inlineHelpText>Is this a one-time order, or do you expect to order additional quantities of these parts in the future?</inlineHelpText>
    <label>Multiple Orders Possible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>