unpackaged/main/default/objects/PSE_Form__c/fields/Needs_Additional_Trial_Parts__c.field-meta.xml
<CustomField>
    <fullName>Needs_Additional_Trial_Parts__c</fullName>
    <label>Needs Additional Trial Parts?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>