unpackaged/main/default/objects/PSE_Form__c/fields/Ordered_From_Xometry_Before__c.field-meta.xml
<CustomField>
    <fullName>Ordered_From_Xometry_Before__c</fullName>
    <label>Ordered These Parts From Xometry Before</label>
    <length>255</length>
    <type>Text</type>
</CustomField>