unpackaged/main/default/objects/PSE_Form__c/fields/ordering_additional_volume__c.field-meta.xml
<CustomField>
    <fullName>ordering_additional_volume__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Beyond this initial order, do you plan on ordering additional volume? If yes, how many and when?</description>
    <label>DoyouplanonOrderingAdditionalVolume?</label>
    <type>Checkbox</type>
</CustomField>