unpackaged/main/default/objects/PSE_Form__c/fields/ordering_additional_volume_picklist__c.field-meta.xml
<CustomField>
    <fullName>ordering_additional_volume_picklist__c</fullName>
    <description>User plans to order additional volume of these parts. This data is represented as a picklist rather than a checkbox because the PSE Form dashboard can only display nullable fields.</description>
    <label>Plans To Order Additional Volume?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>