unpackaged/main/default/objects/PSE_Form__c/fields/Part_Links__c.field-meta.xml
<CustomField>
    <fullName>Part_Links__c</fullName>
    <inlineHelpText>Add links to associated order parts.</inlineHelpText>
    <label>Links to Parts</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>