unpackaged/main/default/objects/PSE_Form__c/fields/partial_shipments_allowed__c.field-meta.xml
<CustomField>
    <fullName>partial_shipments_allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are partial shipments OK?</description>
    <label>Are partial shipments OK?</label>
    <type>Checkbox</type>
</CustomField>