unpackaged/main/default/objects/PSE_Form__c/fields/Parts_and_Industry__c.field-meta.xml
<CustomField>
    <fullName>Parts_and_Industry__c</fullName>
    <inlineHelpText>Briefly describe the function of your parts and indicate in what industry they will be used.</inlineHelpText>
    <label>Parts and Industry</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>