unpackaged/main/default/objects/PSE_Form__c/fields/Previous_Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quote_ID__c</fullName>
    <label>Previous Quote ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>