unpackaged/main/default/objects/PSE_Form__c/fields/previously_ordered_bool__c.field-meta.xml
<CustomField>
    <fullName>previously_ordered_bool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have these (or similar) parts previously been quoted/ordered with Xometry?</description>
    <inlineHelpText>Have you quoted or ordered these parts from Xometry before?</inlineHelpText>
    <label>Parts (or similar) previously ordered</label>
    <type>Checkbox</type>
</CustomField>