unpackaged/main/default/objects/PSE_Form__c/fields/previously_ordered_followup__c.field-meta.xml
<CustomField>
    <fullName>previously_ordered_followup__c</fullName>
    <description>If similar parts have been previously quoted/ordered at Xometry, please provide the previous quote or order number.</description>
    <inlineHelpText>If similar parts have been previously quoted/ordered at Xometry, please provide the previous quote or order number.</inlineHelpText>
    <label>Follow up Information for Previous Order</label>
    <type>TextArea</type>
</CustomField>