unpackaged/main/default/objects/PSE_Form__c/fields/Price_For_Parts__c.field-meta.xml
<CustomField>
    <fullName>Price_For_Parts__c</fullName>
    <description>Question: What price for these parts would make you want to work with us? on CNC Form</description>
    <inlineHelpText>What price for these parts would make you want to work with us?</inlineHelpText>
    <label>What price for these parts to use Xom?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>