unpackaged/main/default/objects/PSE_Form__c/fields/quantities_needed__c.field-meta.xml
<CustomField>
    <fullName>quantities_needed__c</fullName>
    <label>What quantities are needed of each part?</label>
    <type>TextArea</type>
</CustomField>