unpackaged/main/default/objects/PSE_Form__c/fields/Quote_ERP__c.field-meta.xml
<CustomField>
    <fullName>Quote_ERP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote ERP</label>
    <referenceTo>Quote_ERP__c</referenceTo>
    <relationshipLabel>PSE Forms</relationshipLabel>
    <relationshipName>PSE_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>