unpackaged/main/default/objects/PSE_Form__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <externalId>true</externalId>
    <label>Quote ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>