unpackaged/main/default/objects/PSE_Form__c/fields/required_certifications__c.field-meta.xml
<CustomField>
    <fullName>required_certifications__c</fullName>
    <description>Please mark any required certifications for your parts:</description>
    <label>Please mark any required certifications.</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ITAR/EAR Registration</fullName>
            </value>
            <value>
                <fullName>Certificate of Conformance</fullName>
            </value>
            <value>
                <fullName>Domestic Compliant Material Cert</fullName>
            </value>
            <value>
                <fullName>Standard Material Cert</fullName>
            </value>
            <value>
                <fullName>Hardware Certification</fullName>
            </value>
            <value>
                <fullName>Material Traceability</fullName>
            </value>
            <value>
                <fullName>DFARS Compliant Material Cert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>