unpackaged/main/default/objects/PSE_Form__c/fields/required_inspections__c.field-meta.xml
<CustomField>
    <fullName>required_inspections__c</fullName>
    <description>Please mark any required inspections for your parts:</description>
    <label>Please mark any required inspections.</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Inspection</fullName>
            </value>
            <value>
                <fullName>CMM Inspection with Dimensional Report</fullName>
            </value>
            <value>
                <fullName>Source Inspection</fullName>
            </value>
            <value>
                <fullName>Formal Inspection with Dimensional Report</fullName>
            </value>
            <value>
                <fullName>First Article Inspection Report (FAIR AS9102)</fullName>
            </value>
            <value>
                <fullName>Custom Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>