unpackaged/main/default/objects/PSE_Form__c/fields/Sales_Question_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Question_Contact__c</fullName>
    <description>If we have sales questions to help prepare your quote to balance cost, speed, or other factors, who should we contact? Please include email, phone, or SMS numbers.</description>
    <label>Sales Question Contact</label>
    <type>TextArea</type>
</CustomField>