unpackaged/main/default/objects/PSE_Form__c/fields/Sample_Date_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Sample_Date_Requirement__c</fullName>
    <inlineHelpText>When do you need tooling complete and the 10 free samples shipped?</inlineHelpText>
    <label>WhenNeedToolingCompleteSampleShipped?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>