unpackaged/main/default/objects/PSE_Form__c/fields/Split_Shipment_Delivery_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Split_Shipment_Delivery_Schedule__c</fullName>
    <description>If split shipments are required please expand on the delivery schedule needed.</description>
    <label>Split Shipment Delivery Schedule</label>
    <type>TextArea</type>
</CustomField>