unpackaged/main/default/objects/PSE_Form__c/fields/Technical_Aspects__c.field-meta.xml
<CustomField>
    <fullName>Technical_Aspects__c</fullName>
    <inlineHelpText>Are there other technical aspects of your project that we should be aware of?</inlineHelpText>
    <label>Technical Aspects</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>