unpackaged/main/default/objects/PSE_Form__c/fields/Technical_Question_Contact__c.field-meta.xml
<CustomField>
    <fullName>Technical_Question_Contact__c</fullName>
    <description>If we have technical questions about the part models or drawings, who should we contact? Please include email, phone, or SMS numbers.</description>
    <label>Technical Question Contact</label>
    <type>TextArea</type>
</CustomField>