unpackaged/main/default/objects/PSE_Form__c/fields/TestFlowList__c.field-meta.xml
<CustomField>
    <fullName>TestFlowList__c</fullName>
    <label>TestFlowList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>