unpackaged/main/default/objects/PSE_Form__c/fields/usa_production_required__c.field-meta.xml
<CustomField>
    <fullName>usa_production_required__c</fullName>
    <label>manufacturedinUSA?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>