unpackaged/main/default/objects/PSE_Form__c/fields/When_do_you_need_the_Order_Epcoh__c.field-meta.xml
<CustomField>
    <fullName>When_do_you_need_the_Order_Epcoh__c</fullName>
    <label>When do you need the Order Epcoh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>