unpackaged/main/default/objects/PSE_Form__c/fields/When_will_you_place_the_order_Epoch__c.field-meta.xml
<CustomField>
    <fullName>When_will_you_place_the_order_Epoch__c</fullName>
    <label>When will you place the order Epoch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>