unpackaged/main/default/objects/PSE_Form__c/fields/WhenDoYouNeedYourOrderDelivered__c.field-meta.xml
<CustomField>
    <fullName>WhenDoYouNeedYourOrderDelivered__c</fullName>
    <description>when_do_you_need_your_order_delivered_ in Hubspot</description>
    <label>When Do You Need Your Order Delivered?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>