unpackaged/main/default/objects/PSE_Form__c/fields/WhenLikelyToPlaceOrder__c.field-meta.xml
<CustomField>
    <fullName>WhenLikelyToPlaceOrder__c</fullName>
    <description>when_likely_to_place_order in Hubspot</description>
    <label>When Likely To Place Order?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>