unpackaged/main/default/objects/PSE_Form__c/recordTypes/Additive_Form.recordType-meta.xml
<RecordType>
    <fullName>Additive_Form</fullName>
    <active>true</active>
    <label>Additive Form</label>
</RecordType>