unpackaged/main/default/objects/PSE_Form__c/recordTypes/CNC_Form.recordType-meta.xml
<RecordType>
    <fullName>CNC_Form</fullName>
    <active>true</active>
    <label>CNC Form</label>
</RecordType>