unpackaged/main/default/objects/PSE_Form__c/recordTypes/Die_Casting_Form.recordType-meta.xml
<RecordType>
    <fullName>Die_Casting_Form</fullName>
    <active>true</active>
    <label>Die Casting Form</label>
</RecordType>