unpackaged/main/default/objects/PSE_Form__c/recordTypes/Dynamic_Form.recordType-meta.xml
<RecordType>
    <fullName>Dynamic_Form</fullName>
    <active>true</active>
    <description>Semi-Structured PSE Form Data</description>
    <label>Dynamic Form</label>
</RecordType>