unpackaged/main/default/objects/PSE_Form__c/recordTypes/Fab_Five_Form.recordType-meta.xml
<RecordType>
    <fullName>Fab_Five_Form</fullName>
    <active>true</active>
    <description>New PSE form for the Fab Five</description>
    <label>Fab Five Form</label>
</RecordType>