unpackaged/main/default/objects/PSE_Form__c/recordTypes/Injection_Molding_Form.recordType-meta.xml
<RecordType>
    <fullName>Injection_Molding_Form</fullName>
    <active>true</active>
    <label>Injection Molding Form</label>
</RecordType>