unpackaged/main/default/objects/PSE_Form__c/recordTypes/PSE_Form.recordType-meta.xml
<RecordType>
    <fullName>PSE_Form</fullName>
    <active>true</active>
    <description>Unknown Form Type</description>
    <label>PSE Form</label>
</RecordType>